--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1027,26 +1027,45 @@
 
 
                 
-                    if (message.amr_data_db && Array.isArray(message.amr_data_db)) {
+                    if (message.amr_data_db && Array.isArray(message.amr_data_db)|| message.amr_data) {
                         const tempRobotData = {};
 
-                        message.amr_data_db.forEach((amrData) => {
+                        // amr_data_db가 배열인 경우 처리
+                        if (Array.isArray(message.amr_data_db)) {
+                            message.amr_data_db.forEach((amrData) => {
+                                const robotId = amrData.data?.robot_id || null;
+                                const timestamp = amrData.data?.timestamp || null;
+
+                                if (!robotId) return; // robot_id가 없으면 무시
+
+                                // 기존 데이터와 timestamp 비교 후 업데이트
+                                if (!tempRobotData[robotId] || new Date(tempRobotData[robotId].timestamp) < new Date(timestamp)) {
+                                    tempRobotData[robotId] = {
+                                        connection_id: amrData.connection_id,
+                                        robot_id: robotId,
+                                        timestamp: timestamp,
+                                    };
+                                }
+                            });
+                        }
+                        
+                        // amr_data가 단일 객체인 경우 처리
+                        if (message.amr_data) {
+                            const amrData = message.amr_data;
                             const robotId = amrData.data?.robot_id || null;
                             const timestamp = amrData.data?.timestamp || null;
 
-                            // robot_id가 null이면 무시
-                            if (!robotId) return;
-
-                            // 기존 데이터와 timestamp 비교
-                            if (!tempRobotData[robotId] || new Date(tempRobotData[robotId].timestamp) < new Date(timestamp)) {
-                                tempRobotData[robotId] = {
-                                    connection_id: amrData.connection_id,
-                                    robot_id: robotId,
-                                    timestamp: timestamp,
-                                    status: amrData.data?.system_values?.status || "unknown",
-                                };
+                            if (robotId) {
+                                // 기존 데이터와 timestamp 비교 후 업데이트
+                                if (!tempRobotData[robotId] || new Date(tempRobotData[robotId].timestamp) < new Date(timestamp)) {
+                                    tempRobotData[robotId] = {
+                                        connection_id: amrData.connection_id,
+                                        robot_id: robotId,
+                                        timestamp: timestamp,
+                                    };
+                                }
                             }
-                        });
+                        }
 
                         // Object.values를 사용해 최종 배열 생성
                         newRobotData = Object.values(tempRobotData);
