--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -3198,7 +3198,7 @@
             }
 
             // 선택된 로봇의 마커 업데이트
-            updateMarkerPosition(name, latitude, longitude);
+            // updateMarkerPosition(name, latitude, longitude);
 
             // 지도 중심 이동
             map.setView([latitude, longitude], 17);
