--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -778,7 +778,10 @@
 </head>
 <body>
     <h3 id="title">Zeta Satellite Robotics Waypoint Editor</h3>
-
+    <!-- 지도가 표시될 영역 -->
+    <div id="map">
+        
+    </div>
     <!-- 사용자가 로봇을 추가 및 제어할 수 있는 버튼 -->
     <div id="robot-control">
         <label>[Robot Control] </label>
