--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1920,6 +1920,7 @@
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%);
+                        width: 90%;
                         background: white;
                         border: 1px solid black;
                         padding: 20px;
