--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1982,6 +1982,7 @@
                         position: fixed;
                         top: 50%;
                         left: 50%;
+                        width: 90%;
                         transform: translate(-50%, -50%);
                         background: white;
                         border: 1px solid black;
