--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -1958,6 +1958,7 @@
             if (popup) {
                 document.body.removeChild(popup);
             }
+            waypointLayer.clearLayers();
         }
 
         function fetchPathList(robotId, robotName) {
