--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -2023,6 +2023,16 @@
                     popup.innerHTML = `
                         <!-- 상단 영역 -->
                         <div style="position: relative; flex-shrink: 0;">
+                            <!-- 뒤로 가기 버튼 -->
+                            <button onclick="openRobotSelectionPopup()" 
+                                style="
+                                    background: none; 
+                                    border: none; 
+                                    font-size: 14px; 
+                                    color: #007bff; 
+                                    cursor: pointer;">
+                                &#8592; Back
+                            </button>
                             <!-- 제목 -->
                             <h3 style="margin: 0; text-align: center;">Select a Path to Clone</h3>
                             <!-- 닫기 버튼 -->
