--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -2210,7 +2210,7 @@
              // 팝업 숨기기
             const popup = document.getElementById('pathSelectionPopup');
             if (popup) {
-                popup.style.display = 'none'; // 팝업 숨기기
+                popup.style.visibility = 'hidden'; // 팝업 숨기기
             }
 
             // 이미 존재하는 복원 버튼 제거
@@ -2228,13 +2228,13 @@
                     if (error) {
                         console.error('Error fetching waypoints:', error);
                         alert('Failed to load waypoints for preview.');
-                        popup.style.display = 'block'; // 에러 발생 시 팝업 다시 표시
+                        popup.style.visibility = 'hidden'; // 에러 발생 시 팝업 다시 표시
                         return;
                     }
 
                     if (waypoints.length === 0) {
                         alert('No waypoints available for this path.');
-                        popup.style.display = 'block'; // 데이터가 없을 때 팝업 다시 표시
+                        popup.style.visibility = 'hidden'; // 데이터가 없을 때 팝업 다시 표시
                         return;
                     }
 
@@ -2262,7 +2262,7 @@
                         z-index: 1001;
                     `;
                     restoreButton.onclick = () => {
-                        popup.style.display = 'block'; // 팝업 다시 표시
+                        popup.style.visibility = 'hidden' // 팝업 다시 표시
                         document.body.removeChild(restoreButton); // 복원 버튼 제거
                         waypointLayer.clearLayers(); // 지도에서 Waypoints 제거
                     };
