--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -47,14 +47,21 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
             margin: 0;
-            padding: 20px;
-            height: 100vh;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
+            min-height: 100vh;
+            background-color: #2c3e50; /* 배경 색상 */
         }
+
+        .content {
+            text-align: center;
+            color: white; /* 텍스트 색상 */
+        }
+
+        /* 우측 하단 고정 링크 */
         .floating-link {
             position: fixed;
             bottom: 20px; /* 하단 여백 */
@@ -63,18 +70,28 @@
             color: white; /* 흰색 글씨 */
             text-decoration: none;
             font-size: 14px;
-            padding: 10px 15px;
-            border-radius: 5px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 12px 18px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
             cursor: pointer;
             transition: background 0.3s ease, transform 0.2s ease;
             z-index: 1000;
         }
+
         .floating-link:hover {
             background-color: #0056b3; /* Hover 시 더 진한 파란색 */
         }
+
         .floating-link:active {
             transform: scale(0.95); /* 클릭 시 살짝 작아지는 효과 */
+        }
+
+        /* 페이지 레이아웃 요소 */
+        .box {
+            border: 1px solid white;
+            padding: 10px;
+            margin: 10px;
+            display: inline-block;
         }
         
         /* 아이콘 세팅 */
