--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -44,6 +44,44 @@
             width: 100%;         /* 너비를 100%로 설정해 화면을 채움 */
             height: 50vh;        /* 높이를 뷰포트 높이의 50%로 설정 */
         }
+
+        .content {
+            text-align: center;
+            color: white; /* 텍스트 색상 */
+        }
+
+        /* 우측 하단 고정 링크 */
+        .floating-link {
+            position: fixed;
+            bottom: 20px; /* 하단 여백 */
+            right: 20px; /* 우측 여백 */
+            background-color: #007bff; /* 파란색 배경 */
+            color: white; /* 흰색 글씨 */
+            text-decoration: none;
+            font-size: 14px;
+            padding: 12px 18px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            cursor: pointer;
+            transition: background 0.3s ease, transform 0.2s ease;
+            z-index: 1000;
+        }
+
+        .floating-link:hover {
+            background-color: #0056b3; /* Hover 시 더 진한 파란색 */
+        }
+
+        .floating-link:active {
+            transform: scale(0.95); /* 클릭 시 살짝 작아지는 효과 */
+        }
+
+        /* 페이지 레이아웃 요소 */
+        .box {
+            border: 1px solid white;
+            padding: 10px;
+            margin: 10px;
+            display: inline-block;
+        }
         
         /* 아이콘 세팅 */
         .custom-div-icon {
