--- a/zeta_waypoint_editor/index.html
+++ b/zeta_waypoint_editor/index.html
@@ -716,7 +716,7 @@
     </style>
 </head>
 <body>
-    <h3 id="title">Zeta Satellite Robotics Waypoint Editor</h3>
+    <h3 id="title">ZETA Satellite Robotics WP Editor</h3>
     <!-- 지도가 표시될 영역 -->
     <div id="map">
         
